[gd_scene load_steps=6 format=3 uid="uid://cmp5x2k03ooxp"]

[ext_resource type="Texture2D" uid="uid://dg0ldtvtoiia3" path="res://addons/quest_editor/icons/File.png" id="1"]
[ext_resource type="Script" path="res://addons/quest_editor/scenes/triggers/QuestTriggerData.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cavnmixnsholv" path="res://addons/quest_editor/scenes/triggers/QuestTriggerPath.tscn" id="3"]

[node name="QuestTriggerData" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "2" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxType" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 26.0

[node name="Label" type="Label" parent="HBoxType"]
rect_min_size = Vector2(85, 0)
offset_right = 85.0
offset_bottom = 26.0
text = "Type"

[node name="Type" type="Label" parent="HBoxType"]
offset_left = 89.0
offset_right = 131.0
offset_bottom = 26.0
text = "NULL"

[node name="HBoxPath" type="HBoxContainer" parent="."]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 61.0

[node name="Label" type="Label" parent="HBoxPath"]
rect_min_size = Vector2(85, 0)
offset_top = 2.0
offset_right = 85.0
offset_bottom = 28.0
text = "Scene"

[node name="Path" parent="HBoxPath" instance=ExtResource( "3" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 89.0
offset_right = 1000.0
offset_bottom = 31.0

[node name="Open" type="Button" parent="HBoxPath"]
rect_min_size = Vector2(20, 20)
offset_left = 1004.0
offset_right = 1024.0
offset_bottom = 31.0
icon = ExtResource( "1" )

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 65.0
offset_right = 1024.0
offset_bottom = 69.0

[node name="VBoxPreview" type="VBoxContainer" parent="."]
offset_top = 73.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer2D" type="SubViewportContainer" parent="VBoxPreview"]
offset_right = 1024.0
offset_bottom = 527.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="VBoxPreview/ViewportContainer2D"]
handle_input_locally = false
size = Vector2i(1024, 527)
render_target_update_mode = 4

[node name="Viewport2D" type="Node" parent="VBoxPreview/ViewportContainer2D/Viewport"]

[node name="ViewportContainer3D" type="SubViewportContainer" parent="VBoxPreview"]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="VBoxPreview/ViewportContainer3D"]
handle_input_locally = false
size = Vector2i(1024, 540)
render_target_update_mode = 0

[node name="Camera" type="Camera3D" parent="VBoxPreview/ViewportContainer3D/Viewport"]
transform = Transform3D(1, 0, 0, 0, 0.961262, 0.275637, 0, -0.275637, 0.961262, 0, 6, 20)
current = true
near = 0.09

[node name="Viewport3D" type="Node" parent="VBoxPreview/ViewportContainer3D/Viewport"]
